5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1670_1396.log
== TEST (2019-04-16 19:08:14) 
-- CODE:
gorjeta( x=300,0 ^ x<300,0 ) =10%x
gorjeta( x>300,0 ) =6%x
-- ERROR:
File "XXXX", line 1
    gorjeta( x=300,0 ^ x<300,0 ) =10%x
                  ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:08:18) 
-- CODE:
gorjeta( x=300,0 ^ x<300,0 ) =10%x
gorjeta( x>300,0 ) =6%x
-- EXECUTION TIME:
0.190907
-- ERROR:
  File "/home/codebench/codes/1670/1396/main.py", line 1
    gorjeta( x=300,0 ^ x<300,0 ) =10%x
                  ^
SyntaxError: non-keyword arg after keyword arg

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:19) 
-- CODE:
gorjeta( x=300,0 ^ x<300,0 ) =10%x
gorjeta( x>300,0 ) =6%x
-- ERROR:
File "XXXX", line 1
    gorjeta( x=300,0 ^ x<300,0 ) =10%x
                  ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:01) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:09:02) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- EXECUTION TIME:
0.187129
-- ERROR:
  File "/home/codebench/codes/1670/1396/main.py", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: non-keyword arg after keyword arg

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:03) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:03) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:03) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:04) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:09:04) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- EXECUTION TIME:
0.140783
-- ERROR:
  File "/home/codebench/codes/1670/1396/main.py", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: non-keyword arg after keyword arg

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:04) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:04) 
-- CODE:
gorjeta(x=300,0 ^ x<300,0)=10%x
gorjeta(x>300,0)=6%x
-- ERROR:
File "XXXX", line 1
    gorjeta(x=300,0 ^ x<300,0)=10%x
                 ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
